--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,6 +25,17 @@
 #    <%= submit_tag("Submit")%>
 # <% end %> -->
 <%= form_for @user  do |f| %>
+    <% if user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+        <% user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
     <p>
     <%=  f.label :username %>
     <%= f.text_field :username %>
