--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,20 @@
 <%= form_for @user do |f| %>
-<ul>
-  <% @user.errors.full_messages.each do |error| %>
-  <li><%= error %></li>
+  <ul>
+    <% @user.errors.full_messages.each do |error| %>
+    <li><%= error %></li>
+    <% end %>
+  </ul>
+  <p>
+    <%= f.label :username %> <br/>
+    <%= f.text_field :username %>
+  </p>
+  <p>
+    <%= f.label :email %> <br/>
+    <%= f.text_field :email, :value => "example@email.com" %>
+  </p>
+  <p>
+    <%= f.label :password %> <br/>
+    <%= f.password_field :password %>
+  </p>
+  <p><%= f.submit %></p>
   <% end %>
-</ul>
-  USERNAME:<%= f.text_field :username %> <br />
-  EMAIL:<%= f.text_field :email, :value => "example@email.com" %> <br />
-  PASSWORD: <%= f.password_field :password %><br />
-  <%= f.submit %>
-<% end %>
