--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,34 @@
-# <!-- <form  accept-charset="UTF-8" action = "/users" method = "post" >
-# <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-# <label for="username">Name:</label>
-# <input type="text" name="user[username]" id="username" />
+<h1>HTML FORM</h1>
+<form  accept-charset="UTF-8" action = "/users" method = "post" >
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+ <label for="username">Name:</label>
+   <input type="text" name="user[username]" id="username" />
 
-# <label for="email">Email:</label>
-# <input type="email" name="user[email]" id="email" />
+   <label for="email">Email:</label>
+   <input type="email" name="user[email]" id="email" />
 
-# <label for="password">Password:</label>
-# <input type="password" name="user[password]" id="password"/>
+  <label for="password">Password:</label>
+  <input type="password" name="user[password]" id="password"/>
 
-# <input type="submit" value="Submit">
-# </form> -->
+  <input type="submit" value="Submit">
+ </form>  %>
 
-<!--<%= form_tag("/users", method: "post") do %>-->
-<!--   <%=  label_tag(:username,"Username")%>-->
-<!--   <%=  text_field_tag(:username)%>-->
+<h1>FORM_TAG FORM</h1>
+<%= form_tag("/users", method: "post") do %>
+  <%=  label_tag(:username,"Username")%>
+  <%=  text_field_tag(:username)%>
 
-<!--   <%=  label_tag(:email,"Email:")%>-->
-<!--   <%=  email_field_tag(:email)%>-->
+   <%=  label_tag(:email,"Email:")%>
+   <%=  email_field_tag(:email)%>
 
-<!--   <%= label_tag(:password, "Password:")%>-->
-<!--   <%= password_field_tag(:password)%>-->
+   <%= label_tag(:password, "Password:")%>
+   <%= password_field_tag(:password)%>
 
-<!--   <%= submit_tag("Submit")%>-->
-<!--<% end %>-->
+   <%= submit_tag("Submit")%>
+<% end %>
 
+
+<h1>FORM_FOR FORM</h1>
 <%= form_for @user do |f| %>
 <ul>
   <% @user.errors.full_messages.each do |error| %>
@@ -44,3 +48,4 @@
   <%= f.password_field :password %>
 </p>
 <p><%= f.submit %></p>
+<% end %>
